--- a/index.html
+++ b/index.html
@@ -223,9 +223,9 @@
 							<div class="progress-wrap">
 								<h3>Android (JAVA)</h3>
 								<div class="progress">
-								 	<div class="progress-bar color-3" role="progressbar" aria-valuenow="70"
-								  	aria-valuemin="0" aria-valuemax="100" style="width:70%">
-								    <span>70%</span>
+								 	<div class="progress-bar color-3" role="progressbar" aria-valuenow="40"
+								  	aria-valuemin="0" aria-valuemax="100" style="width:40%">
+								    <span>40%</span>
 								  	</div>
 								</div>
 							</div>
@@ -330,7 +330,36 @@
 					</div>
 					<div class="row">
 						<div class="col-md-12">
-				         <div class="timeline-centered">
+				         	<div class="timeline-centered">
+
+								<article class="timeline-entry animate-box" data-animate-effect="fadeInLeft">
+									<div class="timeline-entry-inner">
+
+										<div class="timeline-icon color-1">
+											<i class="icon-pen2"></i>
+										</div>
+
+										<div class="timeline-label">
+											<h2><a href="#">Full Stack Blazor Developer at Scale Shore Consulting- Contractor</a> <span>March 2024 – current</span></h2>
+											<p>Joined Knoxapp project to enhance the UI and implement additional features using Blazor</p>
+											<p>Collaborated with a part-time developer while managing full-time responsibilities</p>
+											<p>Communicated directly with the client, resolving reported bugs and ensuring timely updates</p>
+											<p>Improved site security by implementing various enhancements andmanaging emergency issues as they arose</p>
+											<p>Managed both the staging and production environments, ensuring smooth deployments and system stability.</p>
+											<p>Optimized website performance, focusing on improving load times and overall responsiveness</p>
+											<p>Utilized Azure for cloud infrastructure and MSSQL for database management</p>
+											<p>Testing Security and fixing bugs found</p>
+											<ul>
+											<li>.NET Blazor</li>
+											<li>Microsoft SQL Server</li>
+											<li>Azure</li>
+											<li>Benchmarking</li>
+											</ul>
+										</div>
+									</div>
+									</article>
+
+
 					         <article class="timeline-entry animate-box" data-animate-effect="fadeInLeft">
 					            <div class="timeline-entry-inner">
 
@@ -552,7 +581,7 @@
 									<i class="icon-map"></i>
 								</div>
 								<div class="colorlib-text">
-									<p>82 Phake Rankaile, Mpumalanga, South Africa</p>
+									<p>4 China Berry, Wavecrest, Jefferys Bay, Eastern Cape, South Africa>
 								</div>
 							</div>
 
